# wordfrontier

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
wordfrontier/: Cargo.toml  Makefile  README.md
wordfrontier-tui/: Cargo.toml  LICENSE  Makefile  README.md
wordfrontier-tui/src/: app.rs  config.rs  main.rs  stateful_list.rs  tabs_state.rs  ui.rs
wordfrontier/src/: corpus_db.rs  db_hub.rs  error.rs  langs_db.rs  lib.rs  translations_db.rs  user_db.rs
wordfrontier/tests/: all.rs
