[package]
name = "wordfrontier-tui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
argh = "0.1"
crossterm = "0.20"
rand = "0.8"
tui = { version = "0.16.0", features = ["crossterm"] }
wordfrontier = { path = "../wordfrontier" }
