[package]
name = "wordfrontier-tui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
tui = { version = "0.16.0", features = ["crossterm"] }
wordfrontier = { path = "../wordfrontier" }
