[package]
name = "wordfrontier-tui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
crossterm = "0.20"
env_logger = "0.8.4"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tui = { version = "0.16.0", features = ["crossterm"] }
wordfrontier = { path = "../wordfrontier" }
