[package]
name = "wordfrontier"
version = "0.0.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bzip2 = { version = "0.4.3", optional = true }
lazy_static = "1.4.0"
log = "0.4.14"
maplit = "1.0.2"
reqwest = { version = "0.11.6", optional = true }
rusqlite = { version = "0.25.3", features = ["bundled"] }
thiserror = "1.0.26"

[features]
default = ["download-content"]
download-content = ["bzip2", "reqwest"]

[dev-dependencies]
env_logger = "0.8.4"
serial_test = "0.5.1"
tokio = { version = "1.0", features = ["macros"] }
